--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
     "@babel/core": "^7.10.3",
     "@babel/preset-env": "^7.10.3",
     "@babel/preset-react": "^7.10.1",
+    "@types/react": "^16.9.38",
+    "@types/react-dom": "^16.9.8",
     "babel-loader": "^8.0.2",
     "css-loader": "^1.0.0",
+    "source-map-loader": "^1.0.0",
     "style-loader": "^0.23.0",
-    "webpack": "^4.19.1",
-    "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.8"
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.5",
+    "typings-for-css-modules-loader": "^1.7.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
     "dev": "node_modules/.bin/webpack-dev-server --mode-development",
