--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@babel/preset-react": "^7.10.1",
     "@types/react": "^16.9.38",
     "@types/react-dom": "^16.9.8",
+    "autoprefixer": "^9.8.2",
     "babel-loader": "^8.0.2",
     "css-loader": "^1.0.0",
+    "postcss-loader": "^3.0.0",
     "source-map-loader": "^1.0.0",
     "style-loader": "^0.23.0",
+    "tailwindcss": "^1.4.6",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.5",
     "typings-for-css-modules-loader": "^1.7.0",
